[workspace]
members = ["kobe", "kobe-btc", "kobe-eth", "kobe-xmr"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["kobe"]

resolver = "3"

[workspace.dependencies]
kobe = { path = "./kobe" }
kobe_btc = { path = "./kobe-btc" }
kobe_eth = { path = "./kobe-eth" }
kobe_xmr = { path = "./kobe-xmr" }


[profile.release]
lto = true           # Enable Link Time Optimization to remove unused code
codegen-units = 1    # Maximize optimization at the cost of slower compilation
panic = 'abort'      # Remove panic handling to reduce binary size
strip = true         # Fully strip debug symbols; debugging in production will be difficult
