[package]
name = "kobe-btc"
version = "0.1.0"
edition = "2024"
description = "Bitcoin wallet support for the Kobe wallet library"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std"]
alloc = ["kobe/alloc", "k256/alloc"]

[dependencies]
kobe = { path = "../kobe", default-features = false }
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "schnorr",
    "arithmetic",
] }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }
rand_core = { version = "0.9.5", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

[dev-dependencies]
rand = "0.9.2"
hex = "0.4"
hex-literal = "1.1.0"
