[package]
name = "kobe-eth"
version = "0.1.0"
edition = "2024"
description = "Ethereum wallet support for the Kobe wallet library"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std", "sha3/std"]
alloc = ["kobe/alloc", "k256/alloc"]

[dependencies]
kobe = { path = "../kobe", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.9.2"
hex = "0.4"
hex-literal = "1.1.0"
