[package]
name = "kobe-xmr"
version = "0.1.0"
edition = "2024"
description = "Monero wallet support for the Kobe wallet library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/kobe-xmr"
repository = "https://github.com/pyroth/kobe"
homepage = "https://github.com/pyroth/kobe"
keywords = ["monero", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
