[package]
name = "kobe"
version = "0.1.0"
edition = "2024"
description = "A lightweight, no_std compatible multi-chain wallet core library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/kobe"
repository = "https://github.com/pyroth/kobe"
homepage = "https://github.com/pyroth/kobe"
keywords = ["crypto", "wallet", "blockchain", "no_std"]
categories = ["cryptography", "no-std"]


[features]
default = ["std"]
std = ["alloc", "k256/std", "sha3/std", "hmac/std", "pbkdf2/std", "rand/std"]
alloc = ["k256/alloc"]

[dependencies]
# Core cryptography
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "schnorr",
] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
ripemd = { version = "0.1", default-features = false }

# Randomness
rand_core = { version = "0.9.5", default-features = false }
rand = { version = "0.9.2", default-features = false, optional = true }

# Encoding
bs58 = { version = "0.5", default-features = false, features = [
    "alloc",
    "check",
] }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
hex-literal = "1.1.0"

# Utilities
zeroize = { version = "1.7", default-features = false, features = ["derive"] }
subtle = { version = "2.5", default-features = false }

[dev-dependencies]
rand = "0.9.2"
hex = "0.4"
